JDK 9+ support